Small cleanup for double-tap to zoom on desktop

We update/remove comments that claim that double-tap to zoom is specific
to Android.

We also enable double-tap to zoom on Mac via WebPreferences rather than
hardcoding it as always enabled.

Bug: 802369
Change-Id: Ib78a0a85f295166bff3363ed65dceca9e5e3468e
Reviewed-on: https://chromium-review.googlesource.com/1235129
Reviewed-by: David Bokan <bokan@chromium.org>
Reviewed-by: Rick Byers <rbyers@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Kevin McNee <mcnee@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593557}
Former-commit-id: 9d6c082819b3d4238a58ffbe5849247b19599520